feat: adding offer routes to swagger docs
